--- a/frontend/src/theme/mixins/room-card.scss
+++ b/frontend/src/theme/mixins/room-card.scss
@@ -1,6 +1,7 @@
 @use '@angular/material' as mat;
 
-@mixin selectable-icon($theme) {
+
+@mixin room-card($theme) {
 
     $type: mat.get-theme-type($theme);
     $empty: mat.get-theme-color($theme, inverse-on-surface);
@@ -9,34 +10,26 @@
     $primary: mat.get-theme-color($theme, primary);
     $success: mat.get-theme-color($theme, tertiary);
 
-    .i-selectable {
+    .room-card {
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        width: 11rem;
-        height: 11rem;
         border-radius: 2rem;
-        margin: 0.5rem;
-        color: $empty;
         cursor: pointer;
         .mat-icon {
+            font-size: 6rem;
             width: 6rem;
             height: 6rem;
             margin: 0;
         }
+
+
     }
 
-    .i-selectable-active,
-    .i-selectable:hover {
-        h4,
-        .mat-icon {
-            @if(type == 'dark') {
-                color: $success;
-            } @else {
-                color: $primary;
-            }
-        }
+    .room-card:hover,
+    .selected {
+        @include mat.elevation(6);
     }
 
 }
