--- a/frontend/src/app/@core/application/home/rooms/rooms.component.scss
+++ b/frontend/src/app/@core/application/home/rooms/rooms.component.scss
@@ -1,75 +1,5 @@
-.container {
+.full:not(:first-child) {
     display: flex;
-    flex-direction: column;
-    box-shadow: unset;
-
-    .mat-icon {
-        vertical-align: bottom;
-    }
-
-    .box-2 {
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: center;
-        align-items: center;
-        margin: 2.5rem 0;
-        gap: 2rem;
-        .mat-mdc-card {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            height: 100px;
-            width: 125px;
-            cursor: pointer;
-            transition: transform .2s ease, opacity .5s ease;
-            p {
-                font-family: 'Varela Round', sans-serif;
-                font-size: .8rem;
-                text-align: center;
-            }
-        }
-        .mat-mdc-card:hover,
-        .selected {
-            transform: scale(1.2);
-            z-index: 9999;
-        }
-        .mat-mdc-card:not(:hover):not(.selected){
-            opacity: 0.5;
-        }
-
-    }
-
-    .box-3 {
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: center;
-        align-items: center;
-        gap: 10px;
-        .card {
-            padding: 1.5rem;
-            display: flex;
-            flex-direction: column;
-            width: 40%;
-            .mat-mdc-card-content {
-                margin: 2rem 0;
-                display: flex;
-                flex-direction: column;
-                .mat-divider {
-                    margin: 1rem 0;
-                }
-                [mat-raised-button] {
-                    margin-top: 1rem;
-                }
-            }
-            .mat-mdc-card-actions {
-                display: flex;
-                justify-content: center;
-            }
-        }
-    }
-
-
+    justify-content: center;
+    margin-top: 1.5rem;
 }
